--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8084
+spring.datasource.url=jdbc:mysql://localhost:3306/sys
+#?autoReconnect=true&serverTimezone=UTC&useSSL=False&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Qwerty.12345
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
