Modified functionalities configuration and added client service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8084
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
+item.request.url=localhost:8085
+item.request.api=/api/forceDeleteOrder/{id}
+spring.datasource.url=jdbc:mysql://localhost:3306/product
 #?autoReconnect=true&serverTimezone=UTC&useSSL=False&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=Qwerty.12345
